--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ layout: landing
 								<p> The primary focus of my research is on robust state estimation in data degraded environments </p>
 							</header>
 							<ul class="actions fit">
-								<li><a href="projects.html" class="button special fit">Projects</a></li>
 								<li><a href="publications.html" class="button special fit">Publications</a></li>
+                <li><a href="experience.html" class="button special fit">Experience</a></li>
+								<li><a href="projects.html" class="button special fit">Projects</a></li>
 							</ul>
 						</div>
 					</section>
